--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,13 @@
 services:
-  # Backend API Service
   - type: web
     name: phanmemketoan-backend
     env: python
     plan: free
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend && python main.py
+    buildCommand: pip install -r PhanMemKeToan_backend/requirements.txt
+    startCommand: cd PhanMemKeToan_backend && python main.py
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.16
+        value: 3.11.7  # ← Thay đổi từ 3.13.4 thành 3.11.7
       - key: DATABASE_URL
         fromDatabase:
           name: phanmemketoan-db
